# rust-lnurl

./: Cargo.toml
examples/: lnurl_auth.rs
src/: auth.rs
