[package]
name = "lnurl"
version = "0.2.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Helpers for LNURL"
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/edouardparis/rust-lnurl.git"
documentation = "https://docs.rs/lnurl/"

[lib]
name = "lnurl"

[features]
# Include nothing by default
default = []
auth = ["hex", "secp256k1"]

[dependencies]
hex = { version = "0.4.3", optional = true }
secp256k1 = { version = "0.31.1", optional = true, features = ["hashes"] }
serde = { version = "1.0.219", features =["derive"]}
serde_json = "1.0.140"

[dev-dependencies]
bech32 = "0.11.0"
hex = "0.4.3"
image = "0.25.6"
qrcode = "0.14.1"
rand = "0.9.1"
serde_derive = "1.0.219"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
warp = "0.3.7"

[examples]

[[example]]
name = "lnurl_auth"
required-features = ["auth"]
